config/helm/deployment-metrics-port.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capa-controller-manager
  namespace: capa-system
spec:
  template:
    spec:
      containers:
        - name: manager
          ports:
            - containerPort: 8443
              name: metrics
              protocol: TCP
