config/helm/deployment-requests-limits.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capa-controller-manager
  namespace: capa-system
spec:
  template:
    spec:
      containers:
        - name: manager
          resources:
            requests:
              cpu: 100m
              memory: 250Mi
            limits:
              cpu: 100m
              memory: 250Mi
