config/helm/deployment-seccomp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capa-controller-manager
  namespace: capa-system
spec:
  template:
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: manager
          securityContext:
            seccompProfile:
              type: RuntimeDefault
