config/helm/deployment-securitycontext.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capa-controller-manager
  namespace: capa-system
spec:
  template:
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: manager
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
              - ALL
