config/helm/deployment-toleration.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capa-controller-manager
  namespace: capa-system
spec:
  template:
    spec:
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
      - effect: NoSchedule
        key: "node.cluster.x-k8s.io/uninitialized"
        operator: "Exists"
