config/helm/metrics-service-named-port.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: capa-metrics-service
  namespace: capa-system
spec:
  ports:
    - name: metrics
      port: 8080
      protocol: TCP
      targetPort: metrics
