config/helm/service-add-metrics-port.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: capa-system
  name: capa-webhook-service
spec:
  ports:
    - name: metrics
      port: 8080
      targetPort: metrics
    - name: webhook-server
      port: 443
      targetPort: webhook-server
