config/helm/webhook-service-named-port.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: capa-webhook-service
  namespace: capa-system
spec:
  ports:
    - name: webhook-server
      port: 443
      targetPort: webhook-server
