config/helm/ciliumnetworkpolicy_capa-controller-manager.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: cluster-api
    cluster.x-k8s.io/provider: infrastructure-aws
    control-plane: capa-controller-manager
  name: capa-controller-manager
spec:
  endpointSelector:
    matchLabels:
      cluster.x-k8s.io/provider: infrastructure-aws
      control-plane: capa-controller-manager

  egress:
    # Object reconciliation
    - toEntities:
        - kube-apiserver

  ingress:
    # Web hooks, metrics
    - fromEntities:
        - cluster
        - kube-apiserver
