config/helm/ciliumnetworkpolicy_capa-default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: cluster-api
    cluster.x-k8s.io/provider: infrastructure-aws
    control-plane: capa-controller-manager
  name: capa-default-deny
spec:
  endpointSelector:
    matchLabels:
      cluster.x-k8s.io/provider: infrastructure-aws
      control-plane: capa-controller-manager
  egress:
    # Deny-all
    - {}
  ingress:
    # Deny-all
    - {}
