config/helm/webhook-mutating-watchfilter.yaml
# Generated by 'generate-kustomize-patches.sh'. Do not edit.
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: capa-mutating-webhook-configuration
webhooks:
  - name: default.awscluster.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: default.awsclustercontrolleridentity.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: default.awsclusterroleidentity.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: default.awsclusterstaticidentity.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: default.awsclustertemplate.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: mutation.awsmachine.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: default.awsfargateprofile.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: default.awsmachinepool.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: default.awsmanagedmachinepool.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: default.rosamachinepool.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: default.eksconfigs.bootstrap.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: default.eksconfigtemplates.bootstrap.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: default.awsmanagedcontrolplanes.controlplane.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: default.rosacontrolplanes.controlplane.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
