config/helm/webhook-validating-watchfilter.yaml
# Generated by 'generate-kustomize-patches.sh'. Do not edit.
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: capa-validating-webhook-configuration
webhooks:
  - name: validation.awscluster.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: validation.awsclustercontrolleridentity.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: validation.awsclusterroleidentity.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: validation.awsclusterstaticidentity.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: validation.awsclustertemplate.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: validation.awsmachine.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: validation.awsmachinetemplate.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: validation.awsfargateprofile.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: validation.awsmachinepool.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: validation.awsmanagedmachinepool.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: validation.rosamachinepool.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: validation.rosanetwork.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: validation.rosaroleconfig.infrastructure.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: validation.eksconfigs.bootstrap.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: validation.eksconfigtemplates.bootstrap.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: validation.awsmanagedcontrolplanes.controlplane.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: validation.awsmanagedcontrolplanetemplates.controlplane.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
  - name: validation.rosacontrolplanes.controlplane.cluster.x-k8s.io
    objectSelector:
      matchLabels:
        cluster.x-k8s.io/watch-filter: capi
